security/networkpolicy-sample-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-app-allow-from-ingress
  namespace: apps-prod
spec:
  podSelector:
    matchLabels:
      app: sample-app
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              env: prod
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
    - Egress
